# smart-committer

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: config.rs  error.rs  git.rs  main.rs
