[package]
name = "smart-committer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "net"] }
nah_chat = { version = "0.3.0" }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
