[package]
name = "smart-committer"
version = "0.2.1"
edition = "2024"
license = "MPL-2.0"

[[bin]]
name = "scommit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "net"] }
nah_chat = { version = "0.5.1" }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
mini-poml-rs = { git = "https://github.com/linmx0130/mini-poml-rs" }
